Fix Dark Mode OS icons being unreadable
Spotted by Piotr

--- a/frontend/src/ui-components/stylesheets/ff-theme-dark.scss
+++ b/frontend/src/ui-components/stylesheets/ff-theme-dark.scss
@@ -143,4 +143,6 @@
     --ff-color-tile-bevel-top:             var(--ff-palette-bevel-top);
     --ff-color-tile-ribbon-shadow-indigo:  var(--ff-palette-indigo-900);
     --ff-color-tile-ribbon-shadow-red:     var(--ff-palette-red-900);
+
+    --ff-invert-icon:                      45%
 }
